--- a/src/style/navigation-bar/_main.scss
+++ b/src/style/navigation-bar/_main.scss
@@ -9,17 +9,23 @@
     width: 100%;
     max-width: var.$max-width;
     height: 60px;
-    text-align: center;
+    cursor: pointer;
+    
+    padding: 0;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
     > div  {
-        width: 100%;
-        height: 100%;
-        background-color: #ff0000;
+        width: auto;
         
         > span {
-            
             width: 90%;
-            height: 100%;
-            margin: auto;
+            font-family: 'Caviar Dreams';
+            font-weight: 700;
+            line-height: 20px;
+            text-align: center;
         }
     }
 }
