Google Analytics Added

--- a/src/style/navigation-bar/_main.scss
+++ b/src/style/navigation-bar/_main.scss
@@ -26,6 +26,7 @@
             font-weight: 700;
             line-height: 20px;
             text-align: center;
+            color: var.$text-color;
         }
     }
 }
