--- a/src/styles/mixins/_variables.scss
+++ b/src/styles/mixins/_variables.scss
@@ -2,3 +2,4 @@ $border-color: rgb(54, 54, 56);
 $max-width: 650px;
 $text-color: rgb(74, 74, 66);
 $main-background-color: rgb(242, 242, 247);
+$header-text-color: rgb(58, 58, 60);
