--- a/src/styles/container/item-to-test/_main.scss
+++ b/src/styles/container/item-to-test/_main.scss
@@ -23,6 +23,7 @@
                 content: "\2015\2000";
             }
             color: var.$text-color;
+            font-size: 1.1rem;
         }
     }
 }
