--- a/src/styles/navigation-bar/_main.scss
+++ b/src/styles/navigation-bar/_main.scss
@@ -2,10 +2,10 @@
 
 #top-nav {
     background-color: rgb(238, 238, 242);
-    position: fixed;
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
+    position: relative;
+   // top: 0;
+   // left: 50%;
+   // transform: translateX(-50%);
     width: 100%;
     max-width: var.$max-width;
     height: 60px;
@@ -32,5 +32,5 @@
 }
 
 #top-nav + * {
-    margin-top: 70px !important;
+    //margin-top: 70px !important;
 }
