--- a/src/styles/navigation-bar/_main.scss
+++ b/src/styles/navigation-bar/_main.scss
@@ -2,16 +2,16 @@
 
 #top-nav {
     background-color: rgb(238, 238, 242);
-    position: relative;
+    position: static;
    // top: 0;
    // left: 50%;
    // transform: translateX(-50%);
     width: 100%;
     max-width: var.$max-width;
     height: 60px;
-    cursor: pointer;
+    cursor: context-menu;
     padding: 0;
-    margin: 0;
+    margin: 0 auto;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -27,6 +27,7 @@
             text-align: center;
             color: var.$text-color;
             margin: auto;
+            cursor: context-menu;
         }
     }
 }
