--- a/src/styles/container/description/_main.scss
+++ b/src/styles/container/description/_main.scss
@@ -8,11 +8,12 @@ div.description-row {
         font-size: 1.2rem;
     }
     
-    > article {
+    > p {
         margin-top: 1rem;
         font-size: 1rem;
         text-indent: 1rem;
         color: var.$text-color;
+        line-height: 1.6rem;
     }
     
     padding: 10px;
