--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -12,5 +12,11 @@ ul .icon-cross:before{
 }
 ul .icons:before{
   position:relative;
-  margin-right:.6rem
+  margin-right:.6rem;
+}
+
+
+.icon-svg {
+  margin-right: .4rem;
+  display: inline-block;
 }
